# uutel

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT.md  GEMINI.md  PLAN.md  QWEN.md  README.md  RELEASE.md  TODO.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  WORK.md  build.sh  install.sh  llms.txt  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_error_recovery.py  test_minimal_custom_llm.py
.github/workflows/: ci.yml  push.yml  release-preparation.yml  release.yml  semantic-release.yml
.mypy_cache/3.10/: __future__.meta.json  __main__.meta.json  _ast.meta.json  _asyncio.meta.json  _bisect.meta.json  _blake2.meta.json  _bz2.meta.json  _codecs.meta.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.meta.json  _contextvars.meta.json  _csv.meta.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.meta.json  _frozen_importlib.meta.json  _frozen_importlib_external.meta.json  _hashlib.meta.json  _heapq.meta.json  _io.meta.json  _locale.meta.json  _lsprof.meta.json  _lzma.data.json  _lzma.meta.json  _markupbase.data.json  _markupbase.meta.json  _multibytecodec.data.json  _multibytecodec.meta.json  _operator.meta.json  _pickle.meta.json  _queue.meta.json  _random.meta.json  _sitebuiltins.meta.json  _socket.meta.json  _sqlite3.meta.json  _ssl.meta.json  _stat.meta.json  (+182 more)
.mypy_cache/3.10/Crypto/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/Cython/: Shadow.data.json  Shadow.meta.json  __init__.meta.json
.mypy_cache/3.10/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.10/Levenshtein/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/OpenSSL/: SSL.meta.json  __init__.meta.json  crypto.meta.json
.mypy_cache/3.10/PIL/: GifImagePlugin.data.json  GifImagePlugin.meta.json  Image.meta.json  ImageChops.data.json  ImageChops.meta.json  ImageColor.data.json  ImageColor.meta.json  ImageDraw.data.json  ImageDraw.meta.json  ImageEnhance.data.json  ImageEnhance.meta.json  ImageFile.meta.json  ImageFilter.meta.json  ImageFont.data.json  ImageFont.meta.json  ImageOps.data.json  ImageOps.meta.json  ImagePalette.meta.json  ImageSequence.data.json  ImageSequence.meta.json  PngImagePlugin.data.json  PngImagePlugin.meta.json  PyAccess.meta.json  __init__.meta.json  _binary.data.json  _binary.meta.json  _imaging.meta.json
.mypy_cache/3.10/PyPDF2/: __init__.data.json  __init__.meta.json  _cmap.data.json  _cmap.meta.json  _encryption.data.json  _encryption.meta.json  _merger.data.json  _merger.meta.json  _page.data.json  _page.meta.json  _protocols.data.json  _protocols.meta.json  _reader.data.json  _reader.meta.json  _security.data.json  _security.meta.json  _utils.data.json  _utils.meta.json  _version.data.json  _version.meta.json  _writer.data.json  _writer.meta.json  constants.data.json  constants.meta.json  errors.data.json  errors.meta.json  filters.data.json  filters.meta.json  pagerange.data.json  pagerange.meta.json  papersizes.data.json  papersizes.meta.json  types.data.json  types.meta.json  xmp.data.json  xmp.meta.json
.mypy_cache/3.10/_cffi_backend/: __init__.meta.json
.mypy_cache/3.10/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
.mypy_cache/3.10/_typeshed/: __init__.meta.json  importlib.meta.json  wsgi.meta.json  xml.meta.json
.mypy_cache/3.10/agents/: __init__.data.json  __init__.meta.json  _config.data.json  _config.meta.json  _debug.data.json  _debug.meta.json  _run_impl.data.json  _run_impl.meta.json  agent.data.json  agent.meta.json  agent_output.data.json  agent_output.meta.json  computer.data.json  computer.meta.json  exceptions.data.json  exceptions.meta.json  function_schema.data.json  function_schema.meta.json  guardrail.data.json  guardrail.meta.json  handoffs.data.json  handoffs.meta.json  items.data.json  items.meta.json  lifecycle.data.json  lifecycle.meta.json  logger.data.json  logger.meta.json  model_settings.data.json  model_settings.meta.json  prompts.data.json  prompts.meta.json  repl.data.json  repl.meta.json  result.data.json  result.meta.json  run.data.json  run.meta.json  run_context.data.json  run_context.meta.json  (+12 more)
.mypy_cache/3.10/aiodns/: __init__.data.json  __init__.meta.json  error.data.json  error.meta.json
.swarm/: context.md  doc-manifest.json  telemetry.jsonl
.swarm/session/: state.json
examples/: basic_usage.py  litellm_integration.py  streaming_example.py  tool_calling_example.py
issues/: 101.md  102.md  201.md  202.md  203.md
src/uutel/: __init__.py  __main__.py  uutel.py
tests/: README.md  conftest.py  test_auth.py  test_base.py  test_claude_provider.py  test_cli.py  test_cli_help.py  test_cli_helpers.py  test_cli_validators.py  test_cloud_code_provider.py  test_codex_provider.py  test_config.py  test_dependencies_doc.py  test_documentation_aliases.py  test_examples.py  test_exceptions.py  test_fixture_integrity.py  test_gemini_provider.py  test_init.py  test_logging_config.py  test_metadata_markers.py  test_package.py  test_provider_fixtures.py  test_providers_init.py  test_readme_config.py  test_runners.py  test_tool_calling.py  test_utils.py  test_uutel.py
(+43741 files in other folders)
